<resources>
    <string name="app_name">FuelLog</string>
    <string name="version_xxx">Version: ***</string>
    <string name="fuel_consumption">Fuel consumption</string>
    <string name="list_of_transports">List of Transports</string>
    <string name="fuel_liter_">Fuel Liter *:</string>
    <string name="distance_km_">Distance Km *:</string>
    <string name="fuel_price_">Fuel Price:</string>
    <string name="price_">Price:</string>
    <string name="count">Count</string>
    <string name="liter_100_kilometer_">Liter/100 Kilometer:</string>
    <string name="l_100_km_">L/100 Km:</string>
    <string name="kilometer_1_liter_">Kilometer/1 Liter:</string>
    <string name="km_1_l_">Km/1L:</string>
    <string name="cost_per_kilometer_">Cost per Kilometer:</string>
    <string name="cost_km_">Cost/1Km:</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="add_new_transport">Add New Transport</string>
    <string name="edit_transport">Edit Transport</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="access">Confirm</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="transport_name">Transport name</string>
    <string name="transport_company">Transport Company</string>
    <string name="transport_model">Transport Model</string>
    <string name="transport_year">Transport Year</string>
    <string name="transport_information">Transport Information</string>
    <string name="fuel">Fuel</string>
    <string name="other">Other</string>
    <string name="kilometers_">Kilometers:</string>
    <string name="liters_">Liters:</string>
    <string name="date">Date</string>
    <string name="date_">Date:</string>
    <string name="date_format" translatable="false">dd/mm/yyyy</string>
    <string name="add">Add</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="title_expenses">Title Expenses:</string>
    <string name="title_expenses_">Title Expenses *:</string>
    <string name="change_filter">Change filter</string>
    <string name="change_filter_and_oil">Change filter and oil</string>
    <string name="search">Search</string>
    <string name="chart_fuel_consumption">Chart Fuel Consumption</string>
    <string name="back">Back</string>
    <string name="fuel_consumption_liters_axis_label">Fuel consumption (liters) over time</string>
    <string name="liter_unit">L</string>
</resources>