<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditTransportActivity"
    android:orientation="vertical"
    style="@style/main_layout">

    <LinearLayout
        android:id="@+id/header_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        style="@style/header_style"
        android:layout_marginBottom="34dp">

        <ImageView
            android:id="@+id/back_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/back_btn_style"
            android:src="@drawable/icon_arrow_back"/>

        <TextView
            android:id="@+id/page_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/pageTitleStyle"
            android:text="@string/add_new_transport"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/transport_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/company"/>

    <EditText
        android:id="@+id/company_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/transport_company"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/model"/>

    <EditText
        android:id="@+id/model_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/transport_model"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/year"/>

    <EditText
        android:id="@+id/year_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="4"
        android:hint="@string/transport_year"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/multi_line_input_style"
        android:elevation="4dp"
        android:hint="@string/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_edit_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            style="@style/access_btn_style"
            android:text="@string/add_new_transport"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            style="@style/attention_btn_style"
            android:visibility="gone"
            android:text="@string/delete"/>

    </LinearLayout>

</LinearLayout>