<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/dialogStyle">

    <ImageView
        android:id="@+id/close_btn_iv"
        android:layout_width="@dimen/close_btn_size"
        android:layout_height="@dimen/close_btn_size"
        android:layout_gravity="end"
        android:src="@drawable/icon_cancel"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuel_liter_"/>

    <EditText
        android:id="@+id/fuel_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal|numberSigned"
        android:hint="25.4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/distance_km_"/>

    <EditText
        android:id="@+id/distance_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal|numberSigned"
        android:hint="467.7"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fuel_price_"/>

    <EditText
        android:id="@+id/fuel_price_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal|numberSigned"
        android:hint="0.3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        style="@style/access_btn_style"
        android:text="@string/add"/>

</LinearLayout>