<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartFuelConsumptionActivity"
    android:orientation="vertical"
    style="@style/main_layout">

    <LinearLayout
        android:id="@+id/header_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/header_style"
        android:layout_marginBottom="18dp">

        <ImageView
            android:id="@+id/back_btn"
            style="@style/back_btn_style"
            android:src="@drawable/icon_arrow_back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/page_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/pageTitleStyle"
            android:text="@string/chart_fuel_consumption"/>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:padding="16dp"
        android:clipToPadding="false">

        <com.example.fuellog.views.FuelConsumptionChartView
            android:id="@+id/fuel_chart_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="16dp"
        android:text="@string/fuel_consumption_liters_axis_label"
        style="@style/secondary_text_style" />

</LinearLayout>